# guile-ics

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.org  THANKS  configure.ac  guix.scm
.github/workflows/: guile2.2.yml  guile3.0.yml  guix.yml
build-aux/: pre-inst-env.in
build-aux/am/: Makefile.am  guile.am
build-aux/m4/: Makefile.am
doc/: .gitignore  Makefile.am  guile-ics.texi
examples/: .gitignore  Makefile.am  fosdem.scm.in  schedule.scm.in
modules/: Makefile.am  ics.scm
modules/ics/: Makefile.am  common.scm  conv.scm  fsm.scm  ical-content.scm  ical-object.scm  ical-property.scm  ical-stream.scm  ics-object.scm  object.scm  parser.scm  property.scm  stream.scm  streams.scm  version.scm.in
modules/ics/cli/: Makefile.am  command-convert.scm  command-describe.scm  command-print.scm  common.scm
modules/ics/fsm/: .gitignore  Makefile.am  content-line-context.scm  content-line-parser-context.scm  content-line-parser.puml  stream-context.scm  stream-parser.puml
modules/ics/type/: Makefile.am  binary.scm  boolean.scm  cal-address.scm  content.scm  date-time.scm  date.scm  duration.scm  float.scm  ics-content.scm  ics-object.scm  ics-property.scm  ics-stream.scm  integer.scm  object.scm  period.scm  property.scm  recur.scm  stream.scm  text.scm  time.scm  uri.scm  utc-offset.scm
modules/ics/type/property/: Makefile.am  binary.scm  boolean.scm  cal-address.scm  date-time.scm  date.scm  duration.scm  float.scm  integer.scm  period.scm  property.scm  recur.scm  text.scm  time.scm  uri.scm  utc-offset.scm
modules/srfi/: Makefile.am
tests/: Makefile.am  cli.scm  common.scm  content-line-context.scm  content-line-parser-context.scm  content-line-parser.scm  ics-common.scm  ics.scm  rfc-simplified.ics  stream-context.scm  stream-parser.scm  test.scm  types.scm  vcf.scm
utils/: .gitignore  Makefile.am  ics.in
